package com.example.daycare

enum class Activity(val verb: String) {
    PLAY("playing"),
    EAT("eating"),
    NAP("napping")
}
