package com.example.daycare.pets

interface Pet {
    val name: String
    fun play()
}
