@startuml
together {
    interface Pet {
      + name: String
      + play(): Unit
    }

    class Dog {
      + name: String
      - breed: DogBreed
      + play(): Unit
    }
    note right of Dog::play
      prints...
      - schnauzers: "roo-roo"
      - shepherds: "ruff!"
      - doodles: "woof!"
    end note

    enum DogBreed {
      MINIATURE_SCHNAUZER
      GERMAN_SHEPHERD
      GOLDEN_DOODLE
    }

    class Cat {
      + name: String
      + play(): Unit
    }
    note right of Cat::play
      prints "Meow!"
    end note
}

class Daycare {
  - roster: Set<Pet>
  + register(pet: Pet)
  + unregister(pet: Pet)
  + contains(pet: Pet)
}
note right of Daycare::contains
  operator fun
end note

enum Activity {
  PLAY
  EAT
  NAP
  + verb: String
}
note right of Activity::verb
  e.g., "napping"
end note

class Schedule {
  - steps: List<Activity>
}

class Session {
  - dayCare: Daycare
  - attendance: Set<Pet>
  + schedule: Schedule
  + onArrived(pet: Pet)
  + onDeparted(pet: Pet)
}

Dog ..|> Pet
Cat ..|> Pet
Dog --> DogBreed
Daycare --> Pet
Schedule --> Activity
Schedule ..|> Iterable
Session --> Daycare
Session --> Schedule
@enduml
